# arrOSt

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/arrostd/: Cargo.toml
crates/arrostd/src/: lib.rs
docs/: BOOT.md  DOOM.md  FS.md  GFX.md  INTERRUPTS.md  MEMORY.md  NET.md  PROC.md  STORAGE.md  SYSCALLS.md  USERLAND.md
kernel/: Cargo.toml  build.rs  kernel.ld
kernel/src/: audio.rs  doom.rs  doom_bridge.rs  keyboard.rs  main.rs  mouse.rs  serial.rs  shell.rs  time.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: gdt.rs  interrupts.rs  mod.rs  pic.rs  pit.rs  port.rs
kernel/src/arch/x86_x64/: serial.rs
kernel/src/audio/: virtio_sound.rs
kernel/src/console/: mod.rs  vga_text.rs
kernel/src/fs/: diskfs.rs  mod.rs  ramfs.rs
kernel/src/gfx/: mod.rs
kernel/src/mem/: mod.rs
kernel/src/net/: mod.rs
kernel/src/proc/: mod.rs
kernel/src/storage/: mod.rs
scripts/: qemu.sh  vendor_doomgeneric.sh
user/doom/: Cargo.toml
user/doom/c/: doom_backend.c  doomgeneric_arrost.c  doomgeneric_audio_stub.c  doomgeneric_runner.c  doomgeneric_runner_stub.c  freestanding_libc.c
user/doom/c/freestanding_include/: SDL_mixer.h  assert.h  ctype.h  errno.h  fcntl.h  float.h  inttypes.h  limits.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h
user/doom/c/freestanding_include/sys/: stat.h  time.h  (+1 more)
user/doom/src/: lib.rs
user/doom/wad/: README.md
user/init/: Cargo.toml
user/init/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
